--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -32,7 +32,7 @@
           <a href="QuienesSomos.html">¿QUIENES SOMOS?</a>
         </li>
         <li>
-          <a href="servicios.html">SERVICIOS</a>
+           <a href="cursos.html">CURSOS</a>
         </li>
         <li>
           <a href="metas.html">METAS</a>
