--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -32,7 +32,7 @@
           <a href="QuienesSomos.html">¿QUIENES SOMOS?</a>
         </li>
         <li>
-           <a href="cursos.html">CURSOS</a>
+            <a href="cursos.html">CURSOS</a>
         </li>
         <li>
           <a href="metas.html">METAS</a>
@@ -79,13 +79,13 @@
 
             </div>
             <div>
-                <img src="imagenes/1467646262_522853_1467646344_noticia_normal.jpg" alt="">
+                <img src="imagenes/felipe.png" alt="">
                 <h3>Felipe Reyes Miguel</h3>
                 <p>Estudió Ingeniería En Computacion en la UAEM</p>
 
             </div>
             <div>
-                <img src="imagenes/1467646262_522853_1467646344_noticia_normal.jpg" alt="">
+                <img src="imagenes/sergio.png" alt="">
                 <h3>Sergio Emmanuel Rodriguez</h3>
                 <p></p>
 
