--- a/Q&A.html
+++ b/Q&A.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TechNews</title>
+        <title>PAGINA</title>
         <!-- Font -->
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
         <!-- Font Awesome -->
@@ -32,7 +32,7 @@
           <a href="QuienesSomos.html">¿QUIENES SOMOS?</a>
         </li>
         <li>
-            <a href="cursos.html">Cursos</a>
+            <a href="cursos.html">CURSOS</a>
         </li>
         <li>
           <a href="metas.html">METAS</a>
