--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -87,7 +87,7 @@
             <div>
                 <img src="imagenes/sergio.png" alt="">
                 <h3>Sergio Emmanuel Rodriguez</h3>
-                <p></p>
+                <p> TSU en Tecnologías de la Información área Infraestructura de Redes Digitales</p>
 
             </div>
         </div>
