--- a/Q&A.html
+++ b/Q&A.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Q&A</title>
+        <link rel="icon" href="imagenes/MicrosoftTeams-image.png">
         <!-- Font -->
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
         <!-- Font Awesome -->
