--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -4,8 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>¿Quienes Somos?</title>
-        <link rel="icon" href="imagenes/MicrosoftTeams-image.png">
+        <title>TechNews</title>
         <!-- Font -->
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
         <!-- Font Awesome -->
@@ -88,7 +87,7 @@
             <div>
                 <img src="imagenes/sergio.png" alt="">
                 <h3>Sergio Emmanuel Rodriguez</h3>
-                <p> TSU en Tecnologías de la Información área Infraestructura de Redes Digitales</p>
+                <p></p>
 
             </div>
         </div>
@@ -117,8 +116,10 @@
                <div> •	Cursos y talleres basados contenidos formativos e informativos para sensibilizar y concientizar sobre las necesidades, herramientas junto a los servicios para lograr una inclusión por parte los restaurantes y hoteles para que sean lugares inclusivos</div>
 
             </h2>
-
-            <h2>"¿Quién es DIIN? Un perrito y amigo de una persona con discapacidad. Ambos enfrentar una triple barrera:</h2>
+             </div>
+             <br><br><br><br>
+        <div class="descrip">
+        <h2>"¿Quién es DIIN? Un perrito y amigo de una persona con discapacidad. Ambos enfrentar una triple barrera:</h2>
             <h2 class="po">
                 <div>•	Reconocer su discapacidad que no es una limitante para viajar adquiriendo la información, acompañamiento y servicios iniciar la planeación y disfrutar sus vacaciones.</div>
                 <div>•	Ausencia de la inclusión y accesibilidad con sus herramientas y servicios para los viajes</div>
