--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -33,13 +33,16 @@
           <a href="QuienesSomos.html">¿QUIENES SOMOS?</a>
         </li>
         <li>
-            <a href="cursos.html">CURSOS</a>
+          <a href="servicios.html">SERVICIOS</a>
         </li>
         <li>
-          <a href="metas.html">METAS</a>
+          <a href="cursos.html">FORMACIÓN</a>
         </li>
         <li>
-          <a href="Q&A.html">Q&A</a>
+          <a href="metas.html">COMUNIDAD</a>
+        </li>
+        <li>
+          <a href="Q&A.html">CONTACTO</a>
         </li>
         
       </ul>
