--- a/metas.html
+++ b/metas.html
@@ -61,7 +61,7 @@
         <!--Es la linea que se encuentra debajo del menu-->
         <br><br><br>
         <div class="letra">
-            <h2>METAS</h2>
+            <h2>COMUNIDAD</h2>
         </div>
 
 
