--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -91,6 +91,7 @@
             <div>
                 <img src="imagenes/sergio.png" alt="">
                 <h3>Sergio Emmanuel Rodriguez</h3>
+                 <p>Estudió Tecnologías de la Información Área Infraestructura de Redes Digitales en UTEQ</p>
                 <p></p>
 
             </div>
