--- a/servicios.html
+++ b/servicios.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Servicios</title>
-        <link rel="icon" href="imagenes/MicrosoftTeams-image.png">
         <!-- Font -->
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
         <!-- Font Awesome -->
@@ -36,13 +35,13 @@
           <a href="servicios.html">SERVICIOS</a>
         </li>
         <li>
-          <a href="cursos.html">FORMACIÓN</a>
+          <a href="Formacion.html">FORMACIÓN</a>
         </li>
         <li>
-          <a href="metas.html">COMUNIDAD</a>
+          <a href="Comunidad.html">COMUNIDAD</a>
         </li>
         <li>
-          <a href="Q&A.html">CONTACTO</a>
+          <a href="Contacto.html">CONTACTO</a>
         </li>
         
       </ul>
@@ -63,9 +62,56 @@
         <div class="letra">
             <h2>SERVICIOS</h2>
         </div>
+        <br>
 
+        <div class="imgtext1">
+            <h2>Hotel "Casa Blanca"</h2>
+            <br><br>
+            <img src="imagenes/restaurante1.jpg" alt="">
+            <h3>Para que tu experiencia en la Ciudad de México resulte deliciosa, el Hotel Casa Blanca pone a tu disposición dos restaurantes y dos bares en los que puedes disfrutar de una cocina y un servicio excepcionales.</h3>
+            <h3>Ubicación: Lerdo de Tejada no. 2418, Col. PEDREGAL, CDMX. CP. 1150. Tel.55 27 73 99 04</h3>
+        </div>
 
+        <div class="imgtext2">
+            <h2>Restaurante "Bruna"</h2>
+            <br><br>
+            <img src="imagenes/restaurante2.jpg" alt="">
+            <h3>Los atractivos turísticos de Guadalajara, van mucho más allá de la belleza de su arquitectura, sus museos, sus parques de diversiones y sus centros comerciales y mercados, donde puedes comprar de todo. </h3>
+            <h3>Ubicación: Lerdo de Tejada no. 2418, Col. Lafayette Guadalajara, Jal. CP. 44150. Tel.+52 (33) 20 03 09 04 </h3>
+        </div>
+  
+        <div class="imgtext1">
+            <h2>Hotel "La Candelaria"</h2>
+            <br><br>
+            <img src="imagenes/restaurante3.jpg" alt="">
+            <h3>Para que tu experiencia en la Ciudad de México resulte deliciosa, el Hotel Casa Blanca pone a tu disposición dos restaurantes y dos bares en los que puedes disfrutar de una cocina y un servicio excepcionales.</h3>
+            <h3>Ubicación: Lerdo de Tejada no. 2418, Col. PEDREGAL, CDMX. CP. 1150. Tel.55 27 73 99 04</h3>
+        </div>
+    
 
+        <div class="imgtext2">
+            <h2>Restaurante "Reina"</h2>
+            <br><br>
+            <img src="imagenes/restaurante4.jpg" alt="">
+            <h3>Los atractivos turísticos de Guadalajara, van mucho más allá de la belleza de su arquitectura, sus museos, sus parques de diversiones y sus centros comerciales y mercados, donde puedes comprar de todo. </h3>
+            <h3>Ubicación: Lerdo de Tejada no. 2418, Col. Lafayette Guadalajara, Jal. CP. 44150. Tel.+52 (33) 20 03 09 04 </h3>
+        </div>
+        <div class="imgtext1">
+            <h2>Hotel "Rueda"</h2>
+            <br><br>
+            <img src="imagenes/restaurante5.jpg" alt="">
+            <h3>Para que tu experiencia en la Ciudad de México resulte deliciosa, el Hotel Casa Blanca pone a tu disposición dos restaurantes y dos bares en los que puedes disfrutar de una cocina y un servicio excepcionales.</h3>
+            <h3>Ubicación: Lerdo de Tejada no. 2418, Col. PEDREGAL, CDMX. CP. 1150. Tel.55 27 73 99 04</h3>
+        </div>
+
+        <div class="imgtext2">
+            <h2>Restaurante "Paris"</h2>
+            <br><br>
+            <img src="imagenes/restaurante6.jpg" alt="">
+            <h3>Los atractivos turísticos de Guadalajara, van mucho más allá de la belleza de su arquitectura, sus museos, sus parques de diversiones y sus centros comerciales y mercados, donde puedes comprar de todo. </h3>
+            <h3>Ubicación: Lerdo de Tejada no. 2418, Col. Lafayette Guadalajara, Jal. CP. 44150. Tel.+52 (33) 20 03 09 04 </h3>
+        </div>
+<br><br><br>
         <!--iconcos de redes sociales-->
         <section class="social">
             <p>Follow DiinTravel</p>
