--- a/servicios.html
+++ b/servicios.html
@@ -35,13 +35,13 @@
           <a href="servicios.html">SERVICIOS</a>
         </li>
         <li>
-          <a href="Formacion.html">FORMACIÓN</a>
+          <a href="cursos.html">FORMACIÓN</a>
         </li>
         <li>
-          <a href="Comunidad.html">COMUNIDAD</a>
+          <a href="metas.html">COMUNIDAD</a>
         </li>
         <li>
-          <a href="Contacto.html">CONTACTO</a>
+          <a href="Q&A.html">CONTACTO</a>
         </li>
         
       </ul>
