--- a/Index.html
+++ b/Index.html
@@ -81,11 +81,11 @@ Trabajadores de los establecimientos incluyentes.</p>
     <!-- third card -->
     <section class="cards-banner-two">
       <div class="content">
-        <h2>Lorem, ipsum dolor.</h2>
+        <h2>Objetivos</h2>
         <!-- lorem 30 -->
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut qui laudantium id quam magni accusantium,
-          veritatis, ipsam labore, reprehenderit dolore repudiandae nemo sint deserunt! Suscipit facilis qui inventore
-          consequatur fugit.</p>
+        <p> <br> Concientizar y fomentar la inclusión en los establecimientos y/o comercios alrededor de la CDMX para brindar una experiencia agradable hacia las personas con discapacidad
+<br> Ser equitativo y considerar las necesidades con voz y voto de las PCD
+<br>Creación de una comunidad usando las herramientas tecnológicas y conocimientos de diseño web, programación acompañados de servicios de la nube de Azure para la sensibilización y alzar la voz por una cultura de vacaciones incluyentes, integrales, integración y accesibles</p>
         <a href="#" class="btn">Learn More <i class="fas fa-chevron-right"></i></a>
       </div>
     </section>
@@ -93,16 +93,13 @@ Trabajadores de los establecimientos incluyentes.</p>
     <div class="mision">
         <div>
             <h3>MISIÓN</h3><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-              doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
-            </p>
+            <p>Reducir Ausencia de la inclusión y accesibilidad con sus herramientas y servicios para los viajes navidad de las Personas Con Discapacidad en la CDMX. </p>
             
           </div>
 
           <div>
             <h3>VISIÓN</h3><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-              doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
+            <p> Brindar más oportunidades a personas con discapacidad que han pasado por situaciones de exclusión en espacios no adecuados para su estancia, además crear una gran comunidad donde todos puedan compartir sus experiencias de los viajes incluyentes.
             </p>
           </div>
     </div>
