--- a/cursos.html
+++ b/cursos.html
@@ -67,34 +67,27 @@
  <div class="news-cards">
     <div>
       <img src="imagenes/Bastones de colores.jpg" alt="" />
-      <h3>Lorem, ipsum dolor.</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-        doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
+      <h3>Conociendo a la Discapacidad</h3>
+      <p> Conocer los conceptos básicos sobre la discapacidad y sus tipos.
       </p>
       <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
     </div>
     <div>
       <img src="imagenes/220px-Alternative_Handicapped_Accessible_sign.svg.png" alt="" />
-      <h3>Lorem, ipsum dolor.</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-        doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
-      </p>
+      <h3>Acercamiento a nociones de Inclusión en los viajes</h3>
+      <p>Explicar las nociones teóricas de la inclusión en los viajes en Mexico para un acercamiento al buen trato de personas con discapacidad. </p>
       <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
     </div>
     <div>
       <img src="imagenes/png-transparent-intellectual-disability-international-day-of-disabled-persons-gizarteratzea-mentally-s-text-area-learning-disability-thumbnail.png" alt="" />
-      <h3>Lorem, ipsum dolor.</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-        doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
-      </p>
+      <h3>Reclutamiento y selección inclusiva.</h3>
+      <p>Comprender el proceso de reclutamiento y selección inclusivo adecuado en los centros de trabajo como establecimientos incluyentes </p>
       <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
     </div>
     <div>
       <img src="imagenes/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="" />
-      <h3>Lorem, ipsum dolor.</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-        doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
-      </p>
+      <h3>Sensibilización y concientización sobre la inclusión laboral de personas con discapacidad</h3>
+      <p>Proporcionar información a través de cursos y dinámicas para crear y mantener la sensibilización y concientización en la establecimientos incluyentes. </p>
       <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
     </div>
   </div>
@@ -102,10 +95,8 @@
   <div class="news-cards">
     <div>
       <img src="img/news1.jpg" alt="" />
-      <h3>Lorem, ipsum dolor.</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-        doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
-      </p>
+      <h3>Normativa sobre la Inclusión Laboral en Mexico: Normas de seguridad e higiene, leyes</h3>
+      <p>Identificar las normas, leyes y postulados que conforman el marco jurídico, social y requerimientos para comprender una inclusión en los viajes</p>
       <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
     </div>
     <div>
